2007-11-10  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/chgpasswd.c, src/chpasswd.c: Fix chpasswd and
	chgpasswd stack overflow. Based on Fedora's
	shadow-4.0.18.1-overflow.patch.

2007-11-10  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/useradd.c: Allow non numerical group identifier to be
	specified with useradd's -g option. Applied Debian patch
	397_non_numerical_identifier. Thanks also to Greg Schafer
	<gschafer@zip.com.au>.

2007-10-28  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Prepare the next release: 4.0.18.2. The gettext
	version used for the configuration will be 0.16.

2007-10-28  Nicolas François  <nicolas.francois@centraliens.net>

	* po/ja.po: Remove a plural form. nplurals=1 for japanese.
	Moreover, msgstr[0] was identical to msgstr[1].

2007-10-27  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c, man/limits.5.xml, etc/limits: Apply patch sent
	by Justin Bronder <jsbronder@gmail.com>. See Debian bug #442334.
	This adds support to 2 new resource limits: max nice value, and
	max real time priority. This is only used when shadow is not
	compiled with PAM support.

2007-10-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gpasswd.1.xml: Describe the options separately in the
	OPTIONS section. Simplify the synopsis.

2007-10-27  Nicolas François  <nicolas.francois@centraliens.net>

	* README, po/Makevars: Update contact information.

2007-10-27  Christian Perrier  <bubulle@debian.org

	* src/newgrp.c,	src/passwd.c, src/su.c:
	No longer 'apologize' to users when they use incorrect passwords
	Remove "Sorry" from programs display
	Imported from Debian's patch 413_no-sorry-in-passwd and
	102_de-fix-sorry
	* man/fr/fr.po: fix translation errors. Imported from Debian's
	patch 201_fix_man_su_fr and 416_man-fr_newgrp
	* man/it/it.po, man/Makefile.am, man/it/Makefile.am:
	Use gettext for the Italian man pages translation. Imported from