@@ -377,6 +377,16 @@ int main (int argc, char **argv)
 	 * unless she is listed as a member.  -- JWP
 	 */
 	if (getuid () != 0 && needspasswd) {
+		if (grp->gr_passwd[0] == '\0') {
+			/*
+			 * there is no password, print out "No password."
+			 * and give up
+			 */
+			sleep (1);
+			fputs (_("No password.\n"), stderr);
+			goto failure;
+		}
+
 		/*
 		 * get the password from her, and set the salt for
 		 * the decryption from the group file.
@@ -391,15 +401,6 @@ int main (int argc, char **argv)
 		 */
 		cpasswd = pw_encrypt (cp, grp->gr_passwd);
 		strzero (cp);
-
-		if (grp->gr_passwd[0] == '\0') {
-			/*
-			 * there is no password, print out "Sorry" and give up
-			 */
-			sleep (1);
-			fputs (_("No password.\n"), stderr);
-			goto failure;
-		}
 
 		if (strcmp (cpasswd, grp->gr_passwd) != 0) {
 			SYSLOG ((LOG_INFO,
