@@ -8,6 +8,8 @@ shadow-4.0.18.1 -> shadow-4.0.18.2					UNRELEASED
   Thanks also to Greg Schafer <gschafer@zip.com.au>.
 - chgpasswd, chpasswd: Fix chpasswd and chgpasswd stack overflow. Based on
   Fedora's shadow-4.0.18.1-overflow.patch.
+- newgrp: Don't ask for a password if there are no group passwords. Just
+  directly give up.
 
 shadow-4.0.18.1 -> shadow-4.0.18.2					28-10-2007
 
